NewCorpusForDIE/ChakraCore/test/Error/variousErrors.js
function gc() {
    for (let i = 0; i < 10; i++) {
      new ArrayBuffer(1024 * 1024 * 10);
    }
}

WScript = {
    _jscGC: gc,
    _jscPrint: console.log,
    _convertPathname : function(dosStylePath)
    {
        return dosStylePath.replace(/\\/g, "/");
    },
    Arguments : [ "summary" ],
    Echo : function()
    {
        WScript._jscPrint.apply(this, arguments);
    },
    LoadScriptFile : function(path)
    {
    },
    Quit : function()
    {
    },
    Platform :
    {
        "BUILD_TYPE": "Debug"
    }
};

function CollectGarbage()
{
    WScript._jscGC();
}

function $ERROR(e)
{
}

if (typeof(console) == "undefined") {
    console = {
        log: print
    };
}

if (typeof(gc) == "undefined") {
  gc = function() {
    for (let i = 0; i < 10; i++) {
      new ArrayBuffer(1024 * 1024 * 10);
    }
  }
}

if (typeof(BigInt) == "undefined") {
  BigInt = function (v) { return new Number(v); }
}

if (typeof(BigInt64Array) == "undefined") {
  BigInt64Array = function(v) { return new Array(v); }
}

if (typeof(BigUint64Array) == "undefined") { 
  BigUint64Array = function (v) { return new Array(v); }
}

if (typeof(quit) == "undefined") {
  quit = function() {
  }
}

//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

function write(v) { WScript.Echo(v + ""); }

function getErrorType(e)
{
    if (e instanceof EvalError) return "EvalError";
    if (e instanceof SyntaxError) return "SyntaxError";
    if (e instanceof ReferenceError) return "ReferenceError";
    if (e instanceof TypeError) return "TypeError";
    
    return "unknown";
}

var scen = [
    "42 = 42",
    "'x' = 42",
    "true = 42",
    "null = 42",
    "delete this",
    "delete true",
    "delete 10",
    "delete null"
];

for (var i=0;i<scen.length;i++)
{
    try 
    {
        var result = eval(scen[i]);
        write(scen[i] + " .. " + result);
    }
    catch (e) 
    {
        write(scen[i] + " :: " + getErrorType(e));
    }
}
